--- a/GA_script.html
+++ b/GA_script.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=XXXXXXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5P4XY6Y74"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'XXXXXXXXXXX');
+  gtag('config', 'G-Y5P4XY6Y74');
 </script>
