--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
     <title>Hello, world!</title>
     
-    
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5P4XY6Y74"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76033369-1"></script>
     <script>
-      alert("Google analytics");
+      alert("UA-76033369-1");
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-Y5P4XY6Y74');
+      gtag('config', 'UA-76033369-1');
     </script>
+
   </head>
   <body>
     <h1>Hello, world!</h1>
