--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76033369-1"></script>
+    <script async src="analytics.js"></script>
     <script>
       alert("UA-76033369-1");
       window.dataLayer = window.dataLayer || [];
